# TextTyper

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  start.sh  text.txt
.github/workflows/: c-cpp.yml
src/: main.cpp
